--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="anime.js"></script>
+  <title>yagmyrov</title>
 
   <link rel="stylesheet/less" type="text/css" href="nime.less" />
 <script src="less.js" type="text/javascript"></script>
