--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <div id="text">
   > welcome! me: Perman Yagmyrov. <br>> <a href="https://github.com/pyagmyrov">github </a>;<a href="https://twitter.com/demirgazyk"> twitter </a>; 
-  <a href="https://t.me/pyagmyrov">telegram</a><br>> thanks.<span id="cursor">|</span><br><br<br>>mail: perman@yagmyrov.me<br>
+  <a href="https://t.me/pyagmyrov">telegram</a><br>> thanks.<span id="cursor">|</span>
 </div>
 
