--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <div id="text">
-  > welcome! me: Perman Yagmyrov. <br>> <a href="https://github.com/pyagmyrov">github </a>;<a href="https://twitter.com/demirgazyk"> twitter </a>; 
+  > welcome! me:yagmyrov. <br>> <a href="https://github.com/pyagmyrov">github </a>;<a href="https://twitter.com/demirgazyk"> twitter </a>; 
   <a href="https://t.me/pyagmyrov">telegram</a><br>> thanks.<span id="cursor">|</span>
 </div>
 
