--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="anime.js"></script>
   <title>yagmyrov</title>
+  <link rel="icon" 
+      type="image/png" 
+      href="img/favicon.png">
 
   <link rel="stylesheet/less" type="text/css" href="nime.less" />
 <script src="less.js" type="text/javascript"></script>
