--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <div id="text">
   > welcome! me: yagmyrov. <br>> <a href="https://github.com/pyagmyrov">github </a>;<a href="https://twitter.com/pyagmyrov"> twitter </a>; 
-  <a href="https://t.me/pyagmyrov">telegram</a><br>> thanks.<span id="cursor">|</span>
+  <a href="https://blog.yagmyrov.me">blog</a><br>> thanks.<span id="cursor">|</span>
 </div>
 
