--- a/pclp/index.html
+++ b/pclp/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
-
+<!--[if lt IE 7]>		<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>			<html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>			<html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!-->	<html class="no-js" lang=""> <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
@@ -109,13 +111,7 @@
   							background-attachment: fixed;
   							background-position: center;"></div>
 						</div>
-						<div class="sl-slide bg-5" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
-							<div class="sl-slide-inner" style="background:url(images/indexv3/img-07.jpg);
-							background-size: cover;
-							background-repeat: no-repeat;
-  							background-attachment: fixed;
-  							background-position: center;"></div>
-						</div>
+					
 					</div>
 					<nav id="nav-arrows" class="nav-arrows">
 						<span class="nav-arrow-prev">Previous</span>
@@ -129,7 +125,7 @@
 							<span>beneficii</span>
 							<span>cum se foloseste</span>
 							<span>cum am facut</span>
-							<span>viitor</span>
+							<a href="https://drive.google.com/file/d/14p6axs9m5VaRtrRFyLkNmDWPWNKt-C_m/view?usp=sharing" target="_blank"><span> pdf link</span></a>
 						</nav>
 					</div>
 				</div>
