--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <div id="text">
   > welcome! me: yagmyrov. <br>> <a href="https://github.com/pyagmyrov">github </a>;<a href="https://twitter.com/pyagmyrov"> twitter </a>; 
-  <a href="https://profile.codersrank.io/user/pyagmyrov">ýňöüä</a><br>> thanks.<span id="cursor">|</span>
+  <a href="https://profile.codersrank.io/user/pyagmyrov">ýňöüäž</a><br>> thanks.<span id="cursor">|</span>
 </div>
 
