--- a/telekechi/index.html
+++ b/telekechi/index.html
@@ -24,7 +24,7 @@
 </head>
 <body bgcolor = #ecf0f1>
 <a href="telekechi.pdf" download>
-<button type = "button", button class="button button1"><font color ="white" >telekechi indir</button>
+<button type = "button", button class="button button1"><font color ="white" >telekechi pdf</button>
 </a>
 </body>
 </html>
