--- a/telekechi/index.html
+++ b/telekechi/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
-  <style>
+    <style>
 .button {
+  margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   text-decoration: none;
   border: none;
   color: white;
