--- a/outline/index.html
+++ b/outline/index.html
@@ -27,7 +27,7 @@
 </head>
 <body bgcolor = #ecf0f1>
 <a href="outline.apk" download>
-<button type = "button", button class="button button1"><font color ="white" >shuna basay</button>
+<button type = "button", button class="button button1"><font color ="white" >shuna basayy</button>
 </a>
 </body>
 </html>
