--- a/outline/index.html
+++ b/outline/index.html
@@ -23,7 +23,7 @@
 
 .button1 {background-color: #34495e;} /* Green */
 </style>
-    <title>telekechi</title>
+    <title>outline</title>
 </head>
 <body bgcolor = #ecf0f1>
 <a href="outline.apk" download>
