--- a/telekechi/index.html
+++ b/telekechi/index.html
@@ -26,7 +26,7 @@
     <title>telekechi</title>
 </head>
 <body bgcolor = #ecf0f1>
-<a href="telekechi.pdf" download>
+<a href="teleke.pdf" download>
 <button type = "button", button class="button button1"><font color ="white" >telekechi pdf</button>
 </a>
 </body>
