--- a/tss/index.html
+++ b/tss/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>...</title>
+	<title>....</title>
 </head>
 <body>
-Raspunsul sistemului descries de G(s) la aplicarea unui impuls Dirac este transformata Laplace  inversa a lui: ans: 1/G(s) 
+Raspunsul sistemului descries de G(s) la aplicarea unui impuls Dirac este transformata Laplace inversa a lui: ans: 1/G(s) 
 
 Care este avantajul major al functiilor de transfer? 
 ans: Obtinerea prin operatii algebrice simple a modelelor unor structuri complexe de sisteme 
@@ -26,11 +26,11 @@ ans: toate corect
 
 
 
- Se pot face transfigurari de scheme bloc in Matlab? 
+Se pot face transfigurari de scheme bloc in Matlab? 
 ans: Da 
 
 Transfigurarea schemelor bloc se realizeaza: 
-ans:  Prin identificarea configuratiilor standard  
+ans:  Prin identificarea configuratiilor standard 
 Care de mai jos reprezinta un element de intarziere de ordin 1?
 ans: T1=k/(Ts+1)
 
@@ -88,15 +88,11 @@ Avem secventa de cod urmatoare:
 A=[132;241;102]
 a=A'
 Ce rezultat obtinem?
-ans: transpusa matricii A 
+ans: transpusa matricii A
 Se poate utiliza structura "if" in Matlab?
-ans: da 
- 
- 
- 
- 
- 
- 
+ans: da
+
+	
 
 
 </body>
