--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <div id="text">
-  > welcome! me: yagmyrov. <br>> <a href="https://github.com/pyagmyrov">github</a>;<a href="https://twitter.com/pyagmyrov"> twitter </a>; 
-  <a href="https://linkedin.com/in/pyagmyrov/">linkedIn</a><br>> thanks.<span id="cursor">|</span>
+  > welcome! me: yagmyrov. <br>> <a href="https://github.com/pyagmyrov">github</a>; 
+  <a href="https://linkedin.com/in/pyagmyrov/">linkedIn</a><a href="CV.pdf" download> CV </a>;<br>> thanks.<span id="cursor">|</span>
 </div>
 
