--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <div id="text">
   > welcome() me => yagmyrov; <br>> <a href="https://github.com/pyagmyrov">github</a>&& 
-  <a href="https://linkedin.com/in/pyagmyrov/">linkedin</a>&&<a href="CV.pdf" download> cv;</a><br>> thanks.<span id="cursor">|</span>
+  <a href="https://linkedin.com/in/pyagmyrov/">linkedin</a>&&<a href="CV.pdf" download> cv;</a><br>> thanks;<span id="cursor">|</span>
 </div>
 
