--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <div id="text">
-  > welcome () me => <a href = "mailto: perman@yagmyrov.me">yagmyrov;</a><br>> <a href="https://github.com/pyagmyrov">github &&</a> 
-  <a href="https://linkedin.com/in/pyagmyrov/">linkedin &&</a><a href="CV.pdf" download> cv;</a><br>> thanks;<span id="cursor">|</span>
+  > welcome () me => <a href = "mailto: perman@yagmyrov.me">yagmyrov;</a><br>> <a href="https://github.com/pyagmyrov">github </a> &&
+  <a href="https://linkedin.com/in/pyagmyrov/">linkedin </a>&&<a href="CV.pdf" download> cv;</a><br>> thanks;<span id="cursor">|</span>
 </div>
 
